# langton.wasm

./: .domains  .gitignore  AGENTS.MD  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  GEMINI.md  README.md  flake.nix  index.html  justfile  mise.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: Dockerfile.ci  dependabot.yml
.github/workflows/: Dockerfile  benchmark.yml  build-ci-image.yml  build-image.yml  ci.yml  mirror.yml  pages.yml
.zed/: tasks.json
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: lib.rs  style.css
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/coolbg/: Cargo.toml
crates/coolbg/src/: lib.rs
crates/cube/: Cargo.toml
crates/cube/src/: lib.rs
crates/debug_ui/: Cargo.toml
crates/debug_ui/src/: lib.rs  style.css
crates/dummy/: Cargo.toml
crates/dummy/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine_macros/: Cargo.toml
crates/engine_macros/src/: lib.rs
crates/game_of_life/: Cargo.toml
crates/game_of_life/src/: lib.rs
crates/langton/: .npmrc  Cargo.toml
crates/langton/src/: lib.rs
crates/sierpinski/: Cargo.toml
crates/sierpinski/src/: lib.rs
crates/utils/src/: lib.rs
debug_ui/: Cargo.toml
debug_ui/src/: lib.rs
debug_ui_derive/: Cargo.toml
dev/remote-pr-opener/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  test.diff
dev/remote-pr-opener/src/: git.rs  main.rs  submit.html
lib/canvas/: Cargo.toml  index.html  lib.js
lib/canvas/src/: lib.rs  style.css
lib/debug_ui/: Cargo.toml
lib/debug_ui/examples/: game_config.rs
lib/debug_ui/src/: lib.rs  style.css
lib/debug_ui_derive/src/: lib.rs
prompts/: APPLY-CHANGES.md  FETCH-APPLY-CHANGES.md  NEW-TASK.md
src/langton/: Cargo.toml  index.html  justfile
src/langton/src/: lib.rs
tests/: AGENTS.md  benchmark.py  benchmark_comment.py  benchmark_interleaved.py  benchmark_scenarios.py  ci_comment.py  conftest.py  pyproject.toml  requirements.txt  test_dummy.py  test_langton.py  test_picker.py  test_screenshots.py  test_video_proofs.py
tests/videos/: proof_blinker.webm  proof_cube.webm  proof_sierpinski.webm  test_recording.webm
