[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
common = { path = "./crates/common" }
canvas = { version = "0.1.0", path = "./crates/canvas" }
debug_ui = { version = "0.1.0", path = "./crates/debug_ui" }
engine = { version = "0.1.0", path = "./crates/engine" }
engine_macros = { version = "0.1.0", path = "./crates/engine_macros" }
langton = { version = "0.1.4", path = "./crates/langton" }
dummy = { version = "0.1.0", path = "./crates/dummy" }
cube = { version = "0.1.0", path = "./crates/cube" }
sierpinski = { version = "0.1.0", path = "./crates/sierpinski" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.99"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
gloo = { version = "0.12.0", default-features = false, features = [
  "events",
  "timers",
] }
num-traits = { version = "0.2.19", default-features = false }
url = { version = "2.5.8", default-features = false, features = ["std"] }

[workspace.dependencies.web-sys]
features = [
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Window",
  "History",
  "HtmlHeadElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Location",
  "Navigator",
  "Clipboard",
  "console",
  "MediaRecorder",
  "MediaRecorderOptions",
  "MediaStream",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "HtmlAnchorElement",
  "BlobEvent",
  "Event",
]
version = "0.3.99"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
