[package]
name = "canvas"
description = "A web canvas 2d wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
debug_ui.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
rstest = "0.26.1"
