[package]
name = "debug_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.12.0", default-features = false, features = ["events", "timers"] }
num-traits = { version = "0.2.19", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["std"] }
web-sys.workspace = true
js-sys = "0.3.77"

[dev-dependencies]
rstest = "0.26.1"
