[package]
name = "langton"
description = "A langton's ant simulation for the web"
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://codeberg.org/eldolfin/langton.wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
canvas.workspace = true
debug_ui.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.wasm-pack.profile.release-with-debug]
wasm-opt = ["-g"]
