[package]
name = "langton"
description = "A langton's ant simulation for the web"
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://codeberg.org/eldolfin/langton.wasm"
readme = "README.md"

[dependencies]
canvas.workspace = true
debug_ui.workspace = true
engine.workspace = true
engine_macros.workspace = true

[dev-dependencies]
rstest = "0.26.1"
