[package]
name = "canvas"
description = "A web canvas 2d wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Performance", "Window", "console"]
version = "0.3.77"

[dev-dependencies]
rstest = "0.26.1"
