[package]
name = "debug_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
url = { version = "2.5.4", optional = true }
web-sys = { version = "0.3.77", features = ["Document", "EventListener", "HtmlInputElement", "console"] }

[features]
default = ["auto-detect-path-params"]
auto-detect-path-params = ["dep:url"]
