[package]
name = "debug_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
num-traits = "0.2.19"
url = { version = "2.5.4", optional = true }
web-sys = { version = "0.3.77", features = ["Document", "EventListener", "History", "HtmlHeadElement", "HtmlInputElement", "Location", "console"] }

[features]
default = ["auto-detect-path-params", "save-params-in-url"]
auto-detect-path-params = ["dep:url"]
save-params-in-url = ["dep:url"]

[dev-dependencies]
rstest = "0.25.0"
