[package]
name = "debug_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
num-traits = "0.2.19"
url = { version = "2.5.4" }
web-sys = { version = "0.3.77", features = ["Document", "EventListener", "History", "HtmlHeadElement", "HtmlInputElement", "Location", "console"] }

[dev-dependencies]
rstest = "0.26.1"
